[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
serde = {version="1.0.136", features=["derive"]}
tokio = { version = "1", features = ["full"] }
mongodb = "2.2.0"
futures = "0.3"
dotenv = "0.15.0"
serde_json = "*"
utoipa = { version = "2.4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }